feat: Update post metadata in medium blog post
This commit updates the metadata of a medium blog post. The title, date, category, layout, and mermaid properties are modified to reflect the correct information. The changes were made to the file "_posts/medium/2024-05-05-미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기.md".

--- a/_posts/medium/2024-05-05-미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기.md
+++ b/_posts/medium/2024-05-05-미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기.md
@@ -1,6 +1,12 @@
-# 제목
+---
+title: 미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기
+date: 2024-05-05
+category: medium
+layout: post
+mermaid: true
+---
 
-미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기
+# 미래는 에이전트 - crewAI로 에이전트형 워크플로우 쉽게 만들기
 
 출처 : [The future is Agentic — crewAI. Easily creating Agentic Workflows with… - Gabriel Rennó](https://medium.com/@gabriel_renno/the-future-is-agentic-crewai-f13544aad282)
 
