feat: Update ORPO로 Llama 3 파인튜닝하기 guide

--- a/_posts/medium/2024-05-07-ORPO로 Llama 3 파인튜닝하기 더 저렴하고 빠른 통합 파인튜닝 기술.md
+++ b/_posts/medium/2024-05-07-ORPO로 Llama 3 파인튜닝하기 더 저렴하고 빠른 통합 파인튜닝 기술.md
@@ -1,5 +1,5 @@
 ---
-title: ORPO로 Llama 3 파인튜닝하기: 더 저렴하고 빠른 통합 파인튜닝 기술
+title: ORPO로 Llama 3 파인튜닝하기 더 저렴하고 빠른 통합 파인튜닝 기술
 date: 2024-05-07
 category: medium
 layout: post
